Traslado de la solución a Visual Studio. Git-ignore cambiado. Cambios adaptativos

--- a/views/proyectos.jade
+++ b/views/proyectos.jade
@@ -41,10 +41,12 @@ block content
                 input(type='text', name='fechaModificacion', id='fechaModificacion', readonly='readonly')
             br
             div(class='field')
-                button(type='submit', name='BtnGuardar', id='BtnGuardar', class='ui primary button') Guardar
-                    i(class='save icon')  
-                button(type='button', name='BtnBorrar', id='BtnBorrar', class='ui button') Borrar
-                    i(class='remove icon')                      
+                button(type='submit', name='BtnGuardar', id='BtnGuardar', class='ui primary button')
+                    i(class='save icon')
+                    | Guardar
+                button(type='button', name='BtnBorrar', id='BtnBorrar', class='ui button') 
+                    i(class='remove icon')
+                    | Borrar                     
 
 block footer
     h3 Someday, some place, then you.
