--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,12 @@
 extends layout
 
+block breadcrumb
+    div(class='ui breadcrumb')
+        a(class='section' href='/') GuionMaker
+        i(class='right angle icon divider')
+        span(class='active section') Portada
 block content
-  h1= title
-  p Bienvenido a #{title}
-  p
-   | Would you like to try our new
-   a(href='/proyectos')  Projects section?
-
-block footer
-  footer
-    p Narananana~
+    h1= title
+    p Bienvenido a #{title}
+    p Would you like to try our new
+        a(href='/proyectos')  Projects section?
