--- a/public/src/app/escenas/templates/escenas-lista.component.html
+++ b/public/src/app/escenas/templates/escenas-lista.component.html
@@ -11,13 +11,13 @@
         <ul class="list-group" [sortablejs]="escenas" [sortablejsOptions]="sortOptions">
             <li class="list-group-item" *ngFor="let escena of escenas">
                 <button class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i></button>
-                <span>Escena {{escena.orden}}. {{escena.titulo}}</span>
+                <span><a routerLink="{{escena._id}}">Escena {{escena.orden}}. {{escena.titulo}}</a></span>
                 <button *ngIf="escena.destacado" class="btn btn-default" (click)="onDestacar(false, escena)"><i class="glyphicon glyphicon-ban-circle"></i> No destacar</button>
                 <button *ngIf="!escena.destacado" class="btn btn-default" (click)="onDestacar(true, escena)"><i class="glyphicon glyphicon-flag"></i> Destacar</button>
                 <i class="glyphicon glyphicon-move pull-right"></i>
             </li>
         </ul>
-        <button class="btn btn-primary" (click)="onGuardarCambios()"><i class="glyphicon glyphicon-save"></i> Guardar cambios</button>
+        <botones-guardado [oBotonesGuardado]="botonesGuardado" (onAccionGuardado)="onAccionGuardado($event)"></botones-guardado>
     </div>
 </div>
 
