--- a/public/src/app/escenas/templates/escenas-lista.component.html
+++ b/public/src/app/escenas/templates/escenas-lista.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body">
         <confirmacion-guardado [oConfirm]="confirmacionGuardado"></confirmacion-guardado>
-        <div class="btn-group" role="group">
+        <div class="btn-group mg-btm" role="group">
             <button class="btn btn-default"><i class="glyphicon glyphicon-plus"></i> Añadir escena</button>
             <button class="btn btn-default"><i class="glyphicon glyphicon-export"></i> Exportar</button>
         </div>
