--- a/public/src/app/utils/templates/confirmacion-guardado.component.html
+++ b/public/src/app/utils/templates/confirmacion-guardado.component.html
@@ -1,2 +1,11 @@
-﻿<div *ngIf="oConfirm.guardadoOk" class="alert alert-success"><i class="glyphicon glyphicon-ok"></i> ¡Los cambios se han guardado con éxito!</div>
-<div *ngIf="oConfirm.guardadoKo" class="alert alert-danger"><i class="glyphicon glyphicon-alert"></i> No se han podido guardar los cambios. Inténtalo de nuevo dentro de unos momentos.</div>
+﻿<div *ngIf="!oConfirm.multiguardado" class="fixedTop">
+    <div *ngIf="oConfirm.guardadoOk" class="alert alert-success"><i class="glyphicon glyphicon-ok"></i> ¡Los cambios se han guardado con éxito!</div>
+    <div *ngIf="oConfirm.guardadoKo" class="alert alert-danger"><i class="glyphicon glyphicon-alert"></i> No se han podido guardar los cambios. Inténtalo de nuevo dentro de unos momentos.</div>
+</div>
+<div *ngIf="oConfirm.multiguardado && oConfirm.estadosMultiguardado.length > 0" class="alert alert-info fixedTop">
+    <ul class="list-group">
+        <li class="list-group-item" *ngFor="let estado of oConfirm.estadosMultiguardado">
+            <i class="glyphicon glyphicon-info-sign"></i> {{estado}}
+        </li>
+    </ul>
+</div>
