Movimiento de modelos de Angular a los directorios propios de la aplicación + Prueba del borrado en cascada para las escenas y los detalles + Creación de nuevas escenas + Primeros trabajos sobre el enrutado manual + Mejoras sobre el componente de la confirmación de transacciones con la base de datos

--- a/public/src/app/escenas/templates/escena-detalle.component.html
+++ b/public/src/app/escenas/templates/escena-detalle.component.html
@@ -42,7 +42,7 @@
             </table>
         </div>
     </div>
-    <div *ngIf="mostrarDetalleTecnico && detalleTecnico != undefined" class="panel panel-primary">
+    <div *ngIf="detalleTecnico != undefined" class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">
                 <a role="button" data-toggle="collapse" href="#detalleTecnico" aria-controls="detalleTecnico" aria-expanded="false">
