--- a/public/src/assets/styles.css
+++ b/public/src/assets/styles.css
@@ -23,3 +23,14 @@
     overflow: auto;
     text-align: center;
 }
+
+.multiSaveFixedBottom {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 30%;
+    max-height: 50%;
+    overflow: auto;
+    text-align: center;
+    z-index: 9998;
+}
