Últimos retoques a los estilos de los componentes para interfaces móviles.

--- a/public/src/app/templates/app.component.html
+++ b/public/src/app/templates/app.component.html
@@ -2,8 +2,13 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">GuionMaker</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuGuionMaker" aria-expanded="false">
+                <span class="sr-only">Mostrar/ocultar menú</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="menuGuionMaker">
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="" routerLink="">Inicio</a></li>
                 <li role="presentation" routerLinkActive="active"><a href="" routerLink="/proyectos">Proyectos</a></li>
