--- a/public/src/app/templates/index.component.html
+++ b/public/src/app/templates/index.component.html
@@ -1,7 +1,6 @@
-﻿<h1>GuionMaker App</h1>
-<div class="panel panel-default">
+﻿<div class="panel panel-default">
     <div class="panel-heading">
-        Bienvenidos a la aplicación de gestión de documentos de pre-producción audiovisual
+        <h4 class="panel-title">GuionMaker app: bienvenidos a la aplicación de gestión de documentos de pre-producción audiovisual</h4>
     </div>
     <div class="panel-body">
         <p>Éste es un sitio dedicado enteramente a artistas audiovisuales con apuros en la gestión de la documentación en fase de pre-producción</p>
