--- a/public/src/app/escenas/templates/escena-detalle.component.html
+++ b/public/src/app/escenas/templates/escena-detalle.component.html
@@ -75,10 +75,15 @@
                             <div class="col-md-4">
                                 <input type="file" class="form-control" id="imgTecnica" accept=".jpg,.png,.jpeg" />
                             </div>
-                            <div class="col-md-4">
-                                <button type="button" class="btn btn-success" (click)="onSubidaImagen()"><i class="glyphicon glyphicon-upload"></i> Cargar</button>
-                                <button type="button" class="btn btn-danger" (click)="borrarImagen()" *ngIf="imagenSubida()">Borrar</button>
+                            <div class="col-md-4"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4"></div>
+                            <div class="col-md-4 text-center">
+                                <button type="button" class="btn btn-success" (click)="onSubidaImagen()"><i class="glyphicon glyphicon-upload"></i></button>
+                                <button type="button" class="btn btn-danger" (click)="borrarImagen()" *ngIf="imagenSubida()"><span class="glyphicon glyphicon-trash"></span></button>
                             </div>
+                            <div class="col-md-4"></div>
                         </div>
                     </td>
                 </tr>
