--- a/public/src/app/escenas/templates/escenas-lista.component.html
+++ b/public/src/app/escenas/templates/escenas-lista.component.html
@@ -10,11 +10,15 @@
         </div>
         <ul class="list-group" [sortablejs]="escenas" [sortablejsOptions]="sortOptions">
             <li class="list-group-item" *ngFor="let escena of escenas">
-                <button class="btn btn-danger" data-target="#mdlBorrado" data-toggle="modal" (click)="onSeleccionEscenaAEliminar(escena)"><i class="glyphicon glyphicon-remove"></i></button>
-                <span><a routerLink="{{escena._id}}">Escena {{escena.orden}}. {{escena.titulo}}</a></span>
-                <button *ngIf="escena.destacado" class="btn btn-default" (click)="onDestacar(false, escena)"><i class="glyphicon glyphicon-ban-circle"></i> No destacar</button>
-                <button *ngIf="!escena.destacado" class="btn btn-default" (click)="onDestacar(true, escena)"><i class="glyphicon glyphicon-flag"></i> Destacar</button>
-                <i class="glyphicon glyphicon-move pull-right"></i>
+                <div class="pdn-1">
+                    <div class="row pdn-btm-1"><span class="glyphicon glyphicon-move"></span> <span>ESCENA {{escena.orden}}. {{escena.titulo}}</span></div>
+                    <div class="row">
+                        <button type="button" class="btn btn-default btn-sm" data-target="#mdlBorrado" data-toggle="modal" (click)="onSeleccionEscenaAEliminar(escena)"><i class="glyphicon glyphicon-trash"></i></button>
+                        <button type="button" class="btn btn-default btn-sm" *ngIf="escena.destacado" (click)="onDestacar(false, escena)"><span class="glyphicon glyphicon-star"></span></button>
+                        <button type="button" class="btn btn-default btn-sm" *ngIf="!escena.destacado" (click)="onDestacar(true, escena)"><span class="glyphicon glyphicon-star-empty"></span></button>
+                        <button type="button" class="btn btn-default btn-sm" routerLink="{{escena._id}}"><i class="glyphicon glyphicon-eye-open"></i></button>
+                    </div>
+                </div>
             </li>
         </ul>
         <botones-guardado [oBotonesGuardado]="botonesGuardado" (onAccionGuardado)="onAccionGuardado($event)"></botones-guardado>
