--- a/public/src/app/utils/templates/confirmacion-guardado.component.html
+++ b/public/src/app/utils/templates/confirmacion-guardado.component.html
@@ -2,15 +2,20 @@
     <div *ngIf="oConfirm.guardadoOk" class="alert alert-success"><i class="glyphicon glyphicon-ok"></i> ¡Los cambios se han guardado con éxito!</div>
     <div *ngIf="oConfirm.guardadoKo" class="alert alert-danger"><i class="glyphicon glyphicon-alert"></i> No se han podido guardar los cambios. Inténtalo de nuevo dentro de unos momentos.</div>
 </div>
-<div *ngIf="oConfirm.multiguardado && oConfirm.estadosMultiguardado.length > 0" class="alert alert-info multiSaveFixedBottom">
-    <div class="row">
-        <div class="col-md-11">
-            <ul>
-                <li *ngFor="let estado of oConfirm.estadosMultiguardado">
-                    {{estado}}
-                </li>
-            </ul>
+<div *ngIf="oConfirm.multiguardado && oConfirm.estadosMultiguardado.length > 0" class="modal fade in" role="dialog" style="display:block;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="oConfirm.retirarAviso()"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title"><i class="glyphicon glyphicon-info-sign"></i> Estado del guardado de los cambios.</h4>
+            </div>
+            <div class="modal-body">
+                <ul>
+                    <li *ngFor="let estado of oConfirm.estadosMultiguardado">
+                        ¡{{estado}}!
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-md-1"><a role="button" (click)="oConfirm.retirarAviso()"><i class="glyphicon glyphicon-remove"></i></a></div>
     </div>
 </div>
