--- a/public/src/app/templates/app.component.html
+++ b/public/src/app/templates/app.component.html
@@ -11,9 +11,9 @@
         <div class="collapse navbar-collapse" id="menuGuionMaker">
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="" routerLink="">Inicio</a></li>
-                <li role="presentation" routerLinkActive="active"><a href="" routerLink="/proyectos">Proyectos</a></li>
-                <li role="presentation" routerLinkActive="active"><a routerLink="/escenas">Guiones</a></li>
-                <li role="presentation" routerLinkActive="active"><a routerLink="/biblias">Biblias literarias</a></li>
+                <li role="presentation" routerLinkActive="active"><a routerLink="/proyectos">Proyectos</a></li>
+                <li role="presentation" routerLinkActive="active"><a routerLink="/escenas">Escenas</a></li>
+                <li role="presentation" routerLinkActive="active"><a routerLink="/biblia">Biblia literaria</a></li>
             </ul>
         </div>
     </div>
