--- a/public/src/app/utils/templates/botones-guardado.component.html
+++ b/public/src/app/utils/templates/botones-guardado.component.html
@@ -1,9 +1,10 @@
 ﻿<button class="btn btn-default" (click)="onVolver()" *ngIf="oBotonesGuardado.mostrarVolver"><i class="glyphicon glyphicon glyphicon-chevron-left"></i> Volver</button>
 <button class="btn btn-primary" (click)="onGuardarCambios()" *ngIf="oBotonesGuardado.mostrarGuardado"><i class="glyphicon glyphicon-save"></i> Guardar cambios</button>
 <button class="btn btn-danger" data-toggle="modal" data-target="#mdlBorrado" *ngIf="oBotonesGuardado.mostrarBorrado"><i class="glyphicon glyphicon-remove"></i> Eliminar</button>
+<button class="btn btn-danger" data-toggle="modal" data-target="#mdlCancelar" *ngIf="oBotonesGuardado.mostrarCancelar"><i class="glyphicon glyphicon-remove"></i> Cancelar</button>
 <div class="modal fade" id="mdlBorrado" role="dialog">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content text-center">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Confirmación de borrado</h4>
@@ -18,7 +19,7 @@
 </div>
 <div class="modal fade" id="mdlCancelar" role="dialog">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content text-center">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Confirmación de cancelación</h4>
@@ -26,6 +27,21 @@
             <div class="modal-body">
                 <p>¿Estás seguro de que quieres cancelar este elemento? Este cambio se podrá deshacer retirando el elemento de la lista de cancelados.</p>
                 <button class="btn btn-primary" type="button" (click)="onEliminar()" data-dismiss="modal">Aceptar</button>
+                <button class="btn btn-default" type="button" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="mdlRestaurar" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content text-center">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Confirmación de restauración</h4>
+            </div>
+            <div class="modal-body">
+                <p>¿Estás seguro de que quieres restaurar este elemento? Este cambio eliminará el elemento de la lista de elementos cancelados.</p>
+                <button class="btn btn-primary" type="button" (click)="onRestaurar()" data-dismiss="modal">Aceptar</button>
                 <button class="btn btn-default" type="button" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
