Prepara la entidad colaboración de proyecto + enlace con componente de gestión de colaboradores a falta de realizar el comportamiento de añadir un nuevo email + agregado componente al detalle del proyecto

--- a/public/src/app/proyectos/templates/proyecto-detalle.component.html
+++ b/public/src/app/proyectos/templates/proyecto-detalle.component.html
@@ -34,6 +34,11 @@
         </div>
         <div class="row mgn-top-1">
             <div class="col-md-12">
+                <gestor-colaboraciones [gestorColaboraciones]="gestorColaboraciones"></gestor-colaboraciones>
+            </div>
+        </div>
+        <div class="row mgn-top-1">
+            <div class="col-md-12">
                 <label for="sinopsis">Sinopsis</label>
                 <ng2-summernote lang="es-ES" [(ngModel)]="proyecto.sinopsis" id="sinopsis"></ng2-summernote>
             </div>
