--- a/public/src/app/proyectos/templates/proyectos-lista.component.html
+++ b/public/src/app/proyectos/templates/proyectos-lista.component.html
@@ -3,9 +3,15 @@
         <h4 class="panel-title">Listado de proyectos</h4>
     </div>
     <div class="panel-body">
-        <button type="button" class="btn btn-primary" (click)="onNuevoProyecto()"><i class="glyphicon glyphicon-plus"></i> Añadir proyecto</button>
-        <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="!mostrarCancelados">Mostrar cancelados</button>
-        <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="mostrarCancelados">Ocultar cancelados</button>
+        <div class="row">
+            <div class="col-md-6">
+                <button type="button" class="btn btn-primary" (click)="onNuevoProyecto()"><i class="glyphicon glyphicon-plus"></i> Añadir proyecto</button>
+            </div>
+            <div class="col-md-6">
+                <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="!mostrarCancelados">Mostrar cancelados</button>
+                <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="mostrarCancelados">Ocultar cancelados</button>
+            </div>
+        </div>
         <div class="list-group" *ngIf="proyectos != undefined && proyectos.length > 0">
             <div *ngFor="let proyecto of proyectos" class="list-group-item pdn-1 mgn-top-1">
                 <div class="row">
